# clinical-pdf-extractor

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/clinical_pdf_extractor/: chunking.py  cleaning.py  cli.py  io.py  provenance.py
src/clinical_pdf_extractor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/clinical_pdf_extractor/extract/: __init__.py  tables_pdfplumber.py  text.py  text_pypdf.py
tests/: conftest.py  test_chunking.py  test_cleaning_utils.py  test_manifest.py  test_pdf_basic_extraction.py  test_smoke_cli.py  test_text_extraction.py
