[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clinical-pdf-extractor"
version = "0.0.1"
description = "Mini project: extract text/tables from clinical trial PDFs with traceable outputs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pypdf>=6.0",
  "pdfplumber>=0.11",
  "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "black>=24.0",
  "mypy>=1.8",
  "types-PyYAML",
]

[project.scripts]
cpe = "clinical_pdf_extractor.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "pandas",
    "pandas.*",
    "pdfplumber",
    "pdfplumber.*",
    "pypdf",
    "pypdf.*",
]
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ["py311"]